@@ -203,7 +203,10 @@ public class RevisionIndexer {
     for (SVNLogEntry logEntry : logEntries) {
       logger.debug("Applying changes from revision " + logEntry.getRevision() + " to index");
       Map<String, SVNLogEntryPath> map = logEntry.getChangedPaths();
-      for (String entryPath : map.keySet()) {
+      List<String> latestPathsList = new ArrayList<String>(map.keySet());
+      // Sort the entries to apply changes in right order
+      Collections.sort(latestPathsList);
+      for (String entryPath : latestPathsList) {
         SVNLogEntryPath logEntryPath = map.get(entryPath);
         switch (LogEntryActionType.valueOf(String.valueOf(logEntryPath.getType()))) {
           case A :
@@ -311,8 +314,9 @@ public class RevisionIndexer {
 
     entriesList.addAll(repository.getDir(path, revision, null, (Collection) null));
     for (SVNDirEntry entry : entriesList) {
-      if (!index.add(new RepositoryEntry(entry, path, mountPoint))) {
-        throw new RuntimeException("Unable to add entry to index: " + path + entry + " (" + mountPoint + ")");
+      RepositoryEntry newEntry = new RepositoryEntry(entry, path, mountPoint);
+      if (!index.add(newEntry)) {
+        logger.warn("Unable to add already existing entry to index: " + newEntry.toString());
       }
       if (entry.getKind() == SVNNodeKind.DIR) {
         populateIndex(path + entry.getName() + "/", revision);
@@ -413,19 +417,25 @@ public class RevisionIndexer {
 
   /**
    * Stores the current index to disk using given path and file name.
+   * The index will not be stored if it does not contain any entries.
    *
    * @param storagePathAndName Full path and name where to store index file.
    * @throws RuntimeException if IO error occurs.
    */
   public void storeIndex(final String storagePathAndName) throws RuntimeException {
-    ObjectOutputStream out;
-    try {
-      out = new ObjectOutputStream(new FileOutputStream(storagePathAndName));
-      out.writeObject(index);
-      out.flush();
-      out.close();
-    } catch (IOException ioex) {
-      throw new RuntimeException("Unable to store index to disk", ioex);
+    if (index.getEntries().size() > 0) {
+      logger.info("Saving index to disk, " + storagePathAndName);
+      ObjectOutputStream out;
+      try {
+        out = new ObjectOutputStream(new FileOutputStream(storagePathAndName));
+        out.writeObject(index);
+        out.flush();
+        out.close();
+      } catch (IOException ioex) {
+        throw new RuntimeException("Unable to store index to disk", ioex);
+      }
+    } else {
+      logger.info("Index does not contain any entries and will not be stored on disk.");
     }
   }
 
@@ -433,7 +443,6 @@ public class RevisionIndexer {
    * This method serializes the index to disk.
    */
   public void destroy() {
-    logger.info("Saving index to disk, " + configuration.getSVNConfigurationPath() + INDEX_FILENAME);
     try {
       storeIndex(configuration.getSVNConfigurationPath() + "/" + INDEX_FILENAME);
     } catch (RuntimeException re) {
